--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ dist/
 frontend/node_modules/
 frontend/build/
 *.log
+frontend/node_modules/
+frontend/build/
+frontend/node_modules/
+frontend/build/
